[gd_scene load_steps=27 format=3 uid="uid://bvtqawvvo2n3h"]

[ext_resource type="Script" uid="uid://dmwlgvco3mlo4" path="res://script/slime.gd" id="1_08lxr"]
[ext_resource type="Texture2D" uid="uid://daykwdrwbff5k" path="res://art/Characters/Slime.png" id="2_p3a6y"]
[ext_resource type="Resource" uid="uid://64bqdv7xivvv" path="res://inventory/items/slime.tres" id="2_wkhhu"]
[ext_resource type="PackedScene" uid="uid://fl8dn44y0c85" path="res://scene/slime_collectable.tscn" id="3_p3a6y"]

[sub_resource type="AtlasTexture" id="AtlasTexture_wkhhu"]
atlas = ExtResource("2_p3a6y")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_q8ldp"]
atlas = ExtResource("2_p3a6y")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_yn13l"]
atlas = ExtResource("2_p3a6y")
region = Rect2(256, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pxagv"]
atlas = ExtResource("2_p3a6y")
region = Rect2(288, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_oa5pk"]
atlas = ExtResource("2_p3a6y")
region = Rect2(320, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_a0ytv"]
atlas = ExtResource("2_p3a6y")
region = Rect2(352, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mpwno"]
atlas = ExtResource("2_p3a6y")
region = Rect2(384, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_idadn"]
atlas = ExtResource("2_p3a6y")
region = Rect2(416, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_yudlo"]
atlas = ExtResource("2_p3a6y")
region = Rect2(448, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dlw04"]
atlas = ExtResource("2_p3a6y")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xs1lx"]
atlas = ExtResource("2_p3a6y")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0t0lq"]
atlas = ExtResource("2_p3a6y")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ilr4w"]
atlas = ExtResource("2_p3a6y")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0qdl3"]
atlas = ExtResource("2_p3a6y")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6t675"]
atlas = ExtResource("2_p3a6y")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kn8a4"]
atlas = ExtResource("2_p3a6y")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ew7u5"]
atlas = ExtResource("2_p3a6y")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qjmrd"]
atlas = ExtResource("2_p3a6y")
region = Rect2(160, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_arter"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wkhhu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q8ldp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yn13l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pxagv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oa5pk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a0ytv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mpwno")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_idadn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yudlo")
}],
"loop": true,
"name": &"death",
"speed": 9.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dlw04")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xs1lx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0t0lq")
}],
"loop": true,
"name": &"idle",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ilr4w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0qdl3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6t675")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kn8a4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ew7u5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qjmrd")
}],
"loop": true,
"name": &"move",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_2wliv"]
radius = 6.0827627

[sub_resource type="CircleShape2D" id="CircleShape2D_p1jmo"]
radius = 7.0

[sub_resource type="CircleShape2D" id="CircleShape2D_ms0w7"]
radius = 129.00388

[node name="slime" type="CharacterBody2D"]
script = ExtResource("1_08lxr")
itemRes = ExtResource("2_wkhhu")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_arter")
animation = &"idle"
frame_progress = 0.1647006

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1, 0)
shape = SubResource("CircleShape2D_2wliv")

[node name="hitbox" type="Area2D" parent="CollisionShape2D"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="CollisionShape2D/hitbox"]
shape = SubResource("CircleShape2D_p1jmo")

[node name="detection_area" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="detection_area"]
shape = SubResource("CircleShape2D_ms0w7")

[node name="slime_collectable" parent="." instance=ExtResource("3_p3a6y")]
visible = false
position = Vector2(1, 0)

[connection signal="area_entered" from="CollisionShape2D/hitbox" to="." method="_on_hitbox_area_entered"]
[connection signal="body_entered" from="detection_area" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="detection_area" to="." method="_on_detection_area_body_exited"]
